2005-10-11  Adam Schreiber  <sadam@clemson.edu>
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:  Committed patches attached to
    Bug #314744 and #315084
    
2005-10-04  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-09-16  Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-keyserver-sync.c: Fix syncing after recent 
	refactoring

2005-09-12  Nate Nielsen <nielsen@memberwebs.com>

    * src/seahorse-context.c: Fix lookup on wrong property.
    
2005-08-31  Adam Schreiber <sadam@clemson.edu>
    
    * libseahorse/seahorse-pgp-key-op.c: Fixed multiple photo id
    appearance bug (Bug #314981)

2005-08-29  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c: Fix problems with crashing
    when signing. 
    * libseahorse/seahorse-key.c: 
    * libseahorse/seahorse-key.h: Add functions to get a short keyid.
    * INSTALL:
    * configure.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-signatures.c:
    * libseahorse/seahorse-signatures.glade:
    * pixmaps/Makefile.am:
    * plugns/gedit/seahorse-gedit.c:
    * src/main.c: Added proper support for signature notifications via 
    libnotify (bug# 314782)
    * libseahorse/seahorse-key-store.c: Show short key id in display
    * libseahorse/seahorse-default-key-control.c: Code cleanup
    * libseahorse/seahorse-op.c: Fix another crasher when signing.
    
2005-08-28  Adam Schreiber <sadam@clemson.edu>
    * libseahorse/seahorse-gpgmex-op.c:
    * libseahorse/seahorse-gpgmex-util.c:
    * libseahorse/seahorse-gpgmex.h:
    * libseahorse/seahorse-key-store.h:
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-pgp-source.c: