@@ -1,4 +1,11 @@
+2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-key-store.c: 
+    * libseahorse/seahorse-keyset.c: Cleanup unnecessary code,
+    fix memory leak. 
+    
 2005-10-11  Adam Schreiber  <sadam@clemson.edu>
+
     * libseahorse/seahorse-pgp-key-op.c:
     * libseahorse/seahorse-pgp-key-op.h:
     * libseahorse/seahorse-pgp-key.c:
